# hotdata-materialized

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  manage.py  settings.py
demo/tpch/: models.py
demo/tpch/management/commands/: compare.py
hotdata_materialized/: __init__.py  _arrow.py  _sql.py  client.py  conf.py  decorator.py  exceptions.py  fingerprint.py  indexes.py  registry.py  store.py
scripts/: release.sh
tests/: conftest.py  fakes.py  models.py  test_conf_and_client.py  test_decorator.py  test_fingerprint.py  test_package.py  test_registry.py  test_registry_heal.py  test_sql.py  test_store.py
